# coding-challenges-fyi

./: .gitignore  pyproject.toml
src/compression_tool/: __init__.py  compression.py
src/cut/: __init__.py  cut.py
src/json_parser/: __init__.py  json.py
src/wc/: __init__.py  wc.py
tests/: conftest.py  test_compression.py  test_cut.py  test_json.py  test_wc.py
