[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "codingchallenges"
version = "0.1"
authors = [
  { name="Andrea Pachera" },
]
description = "codingchallenges.fyi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

# dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["wc"]

[project.urls]
"Homepage" = "https://github.com/Manitary/coding-challenges-fyi"

[project.scripts]
ccwc = "wc:main"
